@@ -8,6 +8,15 @@
 #     :key=>"",
 #     :secret=>""
 #   },
+#   :google=>{
+#     :key=>"",
+#     :secret=>"",
+#     :scope=>"" # see http://code.google.com/apis/gdata/faq.html#AuthScopes
+#   },
+#   :yahoo=>{
+#     :key=>"",
+#     :secret=>"",
+#   },
 #   :agree2=>{
 #     :key=>"",
 #     :secret=>""
