@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Pelle Braendgaard"]
-  s.date = %q{2009-09-26}
+  s.date = %q{2009-09-29}
   s.description = %q{Rails plugin for implementing an OAuth Provider or Consumer}
   s.email = %q{oauth-ruby@googlegroups.com}
   s.extra_rdoc_files = [
@@ -83,7 +83,9 @@ Gem::Specification.new do |s|
      "lib/oauth/models/consumers/service_loader.rb",
      "lib/oauth/models/consumers/services/agree2_token.rb",
      "lib/oauth/models/consumers/services/fireeagle_token.rb",
+     "lib/oauth/models/consumers/services/google_token.rb",
      "lib/oauth/models/consumers/services/twitter_token.rb",
+     "lib/oauth/models/consumers/services/yahoo_token.rb",
      "lib/oauth/models/consumers/token.rb",
      "oauth-plugin.gemspec",
      "rails/init.rb",
